--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -58,11 +58,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="126" id="mm0-oj-uEP" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="126"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="mm0-oj-uEP" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mm0-oj-uEP" id="TyQ-sd-qN1">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="125.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n93-UB-tBq">
@@ -79,25 +79,57 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJG-gb-EGY">
-                                            <rect key="frame" x="89" y="37" width="270" height="78"/>
+                                            <rect key="frame" x="89" y="37" width="270" height="62"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3q1-4S-JTa" userLabel="favButton">
+                                            <rect key="frame" x="319" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="1JI-Cf-rSR"/>
+                                                <constraint firstAttribute="width" constant="30" id="ejN-5t-BHK"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="mm0-oj-uEP" eventType="touchUpInside" id="WN1-Rm-Q6u"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wh5-AE-BKI" userLabel="retweetButton">
+                                            <rect key="frame" x="279" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="Vt7-TL-p0J"/>
+                                                <constraint firstAttribute="width" constant="30" id="mY6-Tv-8uq"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="retweet:" destination="mm0-oj-uEP" eventType="touchUpInside" id="T0v-32-1c6"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="3q1-4S-JTa" firstAttribute="leading" secondItem="wh5-AE-BKI" secondAttribute="trailing" constant="10" id="2DI-b9-QG2"/>
+                                        <constraint firstItem="3q1-4S-JTa" firstAttribute="top" secondItem="gJG-gb-EGY" secondAttribute="bottom" id="43F-LT-pEh"/>
                                         <constraint firstItem="n93-UB-tBq" firstAttribute="top" secondItem="TyQ-sd-qN1" secondAttribute="topMargin" id="5WC-H1-eTt"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="wh5-AE-BKI" secondAttribute="bottom" constant="10" id="Afv-VA-Vcq"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="3q1-4S-JTa" secondAttribute="trailing" constant="10" id="Bpu-RT-t9X"/>
                                         <constraint firstItem="gJG-gb-EGY" firstAttribute="top" secondItem="vCI-EJ-cDe" secondAttribute="bottom" constant="4" id="EUh-FI-Icf"/>
-                                        <constraint firstItem="gJG-gb-EGY" firstAttribute="bottom" secondItem="TyQ-sd-qN1" secondAttribute="bottomMargin" id="OWE-p3-sfU"/>
                                         <constraint firstItem="gJG-gb-EGY" firstAttribute="trailing" secondItem="TyQ-sd-qN1" secondAttribute="trailingMargin" id="VOq-fS-xKs"/>
                                         <constraint firstItem="vCI-EJ-cDe" firstAttribute="leading" secondItem="n93-UB-tBq" secondAttribute="trailing" constant="8" id="YfO-Fj-Jhr"/>
                                         <constraint firstItem="n93-UB-tBq" firstAttribute="leading" secondItem="TyQ-sd-qN1" secondAttribute="leadingMargin" id="fQZ-VS-oxI"/>
                                         <constraint firstItem="gJG-gb-EGY" firstAttribute="leading" secondItem="n93-UB-tBq" secondAttribute="trailing" constant="8" id="hJu-eq-Pj2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="3q1-4S-JTa" secondAttribute="bottom" constant="10" id="hob-tC-JxG"/>
                                         <constraint firstItem="vCI-EJ-cDe" firstAttribute="top" secondItem="TyQ-sd-qN1" secondAttribute="topMargin" id="zdl-oF-O12"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="3q1-4S-JTa" id="Ggd-Pv-4NF"/>
                                     <outlet property="profileImageView" destination="n93-UB-tBq" id="xkt-WF-3Y8"/>
+                                    <outlet property="retweetButton" destination="wh5-AE-BKI" id="kar-bS-z9a"/>
                                     <outlet property="tweetContent" destination="gJG-gb-EGY" id="dBL-SB-PUk"/>
                                     <outlet property="userNameLabel" destination="vCI-EJ-cDe" id="rbi-d8-k4V"/>
                                 </connections>
@@ -215,4 +247,8 @@
             <point key="canvasLocation" x="1634" y="758"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+    </resources>
 </document>
